--- a/www/index.html
+++ b/www/index.html
@@ -346,13 +346,6 @@
 
         function updateBal() {
             const bal = txns.reduce((acc, t) => {
-                if(t.type === 'income') return acc + t.amt;
-                return acc - t.amt;
-            }, 0);
-            document.getElementById('balance').innerText = `₹${bal}`;
-        }
-
-        init();
-    </script>
+                if(t.type === '
 </body>
 </html>
